--- a/src/Layout/index.module.less
+++ b/src/Layout/index.module.less
@@ -2,18 +2,27 @@
 
 .middle {
   width: 100%;
-  height: calc(100% - @headerHeight - @footerHeight);
+  height: calc(100vh - @headerHeight - @footerHeight);
   display: flex;
   overflow: hidden;
   background-color: #FFFFFF;
 }
 
+.sider {
+  :global {
+    
+    .ant-layout-sider-children{
+      width: @sidebarWidth !important;
+      background-color: #ededed;
+      overflow: hidden;
+    }
+  }
+}
+
 .content {
   /* 减去sidebar的宽度 */
-  width: calc(100% - @sidebarWidth);
+  width: calc(100vw - @sidebarWidth) !important;
 
-  /* 减去header和footer的高度 */
-  height: calc(100% - @headerHeight - @footerHeight);
   margin-top: @headerHeight;
   margin-bottom: @footerHeight;
   overflow: scroll;
