--- a/src/Layout/Header/Navbar/index.module.less
+++ b/src/Layout/Header/Navbar/index.module.less
@@ -1,8 +1,12 @@
 .root {
+  z-index: 10;
+  position: fixed;
+  width: 100%;
   display: flex;
   align-items: center;
   height: @headerHeight;
   background-color: #F6F6F6;
+  box-shadow: 0 1px 10px 1px rgb(0 0 0 / 12%);
 }
 
 .item {
