--- a/src/pages/discovery/Recommendation/LatestMusic/MusicItem/index.module.less
+++ b/src/pages/discovery/Recommendation/LatestMusic/MusicItem/index.module.less
@@ -8,7 +8,6 @@
 
   &:hover {
     background-color: #f5f5f5;
-    cursor: pointer;
 
   }
   &.active {
@@ -24,6 +23,10 @@
   width: 60px;
   height: 60px;
   border-radius: 5px;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .number {
