--- a/src/pages/discovery/Recommendation/LatestMusic/MusicItem/index.module.less
+++ b/src/pages/discovery/Recommendation/LatestMusic/MusicItem/index.module.less
@@ -34,8 +34,18 @@
   color: #bbbbbb;
 }
 
+.icon {
+  width: 12px;
+  height: 12px;
+  margin: 0 13px;
+}
+
 .artists {
   margin-top: 5px;
   color: #bbbbbb;
   font-size: 12px;
+  overflow: hidden;
+  word-wrap: normal;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
