--- a/src/components/PlayAudio/LeftAudioItem/index.module.less
+++ b/src/components/PlayAudio/LeftAudioItem/index.module.less
@@ -3,10 +3,11 @@
 .img {
   width: 45px;
   height: 45px;
-  border-radius: 5px;
+  border-radius: 8px;
 }
 
 .top {
+  display: flex;
 }
 
 .name {
@@ -15,8 +16,13 @@
 }
 
 .artists {
+  width: 200px;
   color: #bababa;
   font-size: 14px;
+  overflow: hidden;
+  word-wrap: normal;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .text {
