--- a/src/components/PlayAudio/LeftAudioItem/index.module.less
+++ b/src/components/PlayAudio/LeftAudioItem/index.module.less
@@ -11,8 +11,13 @@
 }
 
 .name {
+  max-width: 170px;
   color: #182026;
   font-size: 14px;
+  overflow: hidden;
+  word-wrap: normal;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .artists {
