--- a/src/Layout/Header/Search/DrawerContent/index.module.less
+++ b/src/Layout/Header/Search/DrawerContent/index.module.less
@@ -9,6 +9,10 @@
       padding: 4px 10px;
       margin: 5px 5px;
       border-radius: 15px;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 
@@ -19,6 +23,10 @@
     display: flex;
     align-items: center;
     margin: 30px 20px 30px 0;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   .hotCard {
