--- a/src/pages/search/SingleSong/index.module.less
+++ b/src/pages/search/SingleSong/index.module.less
@@ -42,6 +42,11 @@
           padding: 10px 16px;
         }
 
+        .ant-table-cell-row-hover {
+          background-color: #f2f2f3 !important;
+          cursor: pointer;
+        }
+
         .ant-table-cell {
           border: 0px !important;
         }
