--- a/src/components/PlayAudio/LeftAudioItem/index.module.less
+++ b/src/components/PlayAudio/LeftAudioItem/index.module.less
@@ -64,6 +64,11 @@
 
 .drawer {
   :global {
+
+    .ant-drawer-body {
+      padding: 0;
+    }
+
     .ant-drawer-mask {
       background: rgba(255,255,255,0) !important;
     }
