--- a/src/components/SongDetail/SongImg/index.module.less
+++ b/src/components/SongDetail/SongImg/index.module.less
@@ -29,7 +29,7 @@
     align-items: center;
     width: 300px;
     height: 300px;
-    background-color: #1c1d20;
+    background: radial-gradient(circle, #060708, #101114);
     border-radius: 50%;
     border: 10px solid #e4e0e0;
     animation: rotate 10s infinite linear; /* 应用旋转动画 */
