--- a/src/pages/discovery/Recommendation/LatestMusic/MusicItem/index.module.less
+++ b/src/pages/discovery/Recommendation/LatestMusic/MusicItem/index.module.less
@@ -1,17 +1,31 @@
 .root {
+  position: relative;
   width: 550px;
   height: 80px;
   display: flex;
   align-items: center;
-  padding: 10px 0;
+  padding: 5px;
   border-top: 1px solid #f5f5f5;
 
   &:hover {
     background-color: #f5f5f5;
+    cursor: pointer;
 
   }
   &.active {
     background-color: borderColor;
+  }
+
+  .play {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #dad6d7;
+    left: 22px
   }
 }
 
@@ -23,10 +37,6 @@
   width: 60px;
   height: 60px;
   border-radius: 5px;
-
-  &:hover {
-    cursor: pointer;
-  }
 }
 
 .number {
