fix: flex伸缩属性导致样式改变

--- a/src/components/SongDetail/index.module.less
+++ b/src/components/SongDetail/index.module.less
@@ -6,11 +6,11 @@
     height: 470px;
 
     .img {
-      flex: 8;
+      width: 55%;
     }
 
     .lyric {
-      flex: 7;
+      width: 45%;
     }
   }
 
@@ -18,10 +18,10 @@
     display: flex;
 
     .comment {
-      flex: 2;
+      width: 66%;
     }
     .recommend {
-      flex: 1;
+      width: 34%;
     }
   }
 }
