feat: 滚动条隐藏

--- a/src/components/SongDetail/SongLyric/index.module.less
+++ b/src/components/SongDetail/SongLyric/index.module.less
@@ -29,3 +29,12 @@
     }
   }
 }
+
+
+.lyric::-webkit-scrollbar {
+  background-color: #f8f8f8;
+}
+
+.lyric::-webkit-scrollbar-thumb {
+  background-color: #f8f8f8; /* 设置滚动条拖动块颜色 */
+}
